--- a/index.html
+++ b/index.html
@@ -4,55 +4,150 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css"> 
   <link rel="stylesheet" type="text/css" href="styles/starter.css">
+  <link rel="stylesheet" type="text/css" href="styles/both.css"> 
   <script defer src="javascript/java.js"></script>
 
-  <title> project </title>
+  <title> Kelly Hoang Portfolio </title>
 </head>
 
-<ul class="navbar"> 
-    <li><a href ="#Bio">Biography</a></li>
-    <li><a href ="#goals">Goals</a></li>
-    <li><a href ="#design">Designs</a></li>
-    <li><a href ="#contact">Contact</a></li>
-</ul>
 
 <body>
- <section id="Hero">
-    <section class="hero-container">
-        <div class="hero-image">
-            <img class="hero" src="assets " alt="  ">
-            <div class="hero-text">
-            <h1> title </h1>   
-            </div>
-         </div>
-    </section>
- </section>
-
-<id="goals">Goals:</h3> 
-
-  <section id="video-section">
-    <div class="video-container">
-    <iframe>   
-    </iframe>
-    </div>
+  <section id="Hero">
+  <section class="hero-container">
+      <div class="hero-image">
+      <img class="hero" src="assets/paper.png " alt="sage with a white paper">
+        <div class="hero-text">
+          <h1> Kelly Hoang's Portfolio </h1>
+           
+        </div>
+      </div>
+  </section>
   </section>
 
+  <ul class="navbar"> 
+    <li><a href ="#content">About</a></li>
+    <li><a href ="#cards">Designs & Projects</a></li>
+    <li><a href ="#goals">Inspiration</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href ="#accordion"> Skills </a></li>
+
+  </ul>
+  
+  <section id="content">
+    <div class="main">
+        <section id="content-container">
+          <div class="content">
+            <img src="assets/kelly.png" alt="kelly an asian girl hair in two braid with glasses with snowy background" class="left-image">
+            <div class="about-text">
+              <h1> About me! </h1>
+              <p> Hi there! I'm Kelly Hoang I am a graphic designer based in Calgary. I am currently studying at SAIT, in the Graphic Design Program, in IDD. I love to work with clients of all, and I try to strive to surpass my client's expectations while incorporating my unique creative touch in design! </p>
+             <button class="contactbutton">Contact me!</button>
+            </div>
+          </div>
+        </section>  
+    </div>
+ </section>
+
+<section id="cards">
+  <section id="card-title">
+      <h1 class="header">
+        Designs & Projects
+      </h1>
+</section>
+
+    <div class="card-container">
+        <div class="card">
+        <img src="assets/sword.png" alt= "pink sword, holder and handed piece with flower and ribbon detailing on navy blue background">
+        <div class="card-content">
+        <h2>Demon Slayer Original Character Sword Design </h2>
+        <p> This is a sword design, I created this for my original character as if they had an ability/power like the other characters in the show. </p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="assets/poster.png" alt="poster advertisement have pixel pizza purple star and clouds on purple background">
+        <div class="card-content">
+        <h2> Pixel Pizza Branding Poster </h2>
+        <p>This is a poster that I created for a brand assignment, if Pixel Pizza did rebrand, this is what they would show for a physical advertisement print. </p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="assets/body.png" alt="one girl with long hair and bow look at reflection of a girl with short hair that is injure">
+        <div class="card-content">
+          <h2> Body Image Assignment </h2>
+          <p> This was for an assignment that we talked about online body manipulation. I design an image that interprets how some girls may feel about themselves within the online space/reputation. </p>
+        </div>
+    </div>
+</section>
+
+
+<section id="goals">
+  <section id="inspo-title">
+    <h3 class="header">
+       Inspiration 
+    </h3>
+  </section>
+
+ <div class="vid-card">
+     <div class="card-video">
+       <iframe 
+         title="YouTube video player"
+         width="560" 
+         height="315" 
+         src="https://www.youtube.com/embed/AhJ9-AtFje0?si=Mp2W5G8tqdzktAPa" 
+         frameborder="0" 
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+         referrerpolicy="strict-origin-when-cross-origin"
+         allowfullscreen>
+      </iframe>
+     </div>
+     <div class="card-content">
+       <h3>Video Title 1</h3>
+       <p>Description of video 1 goes here.</p>
+     </div>
+  </div>
+ <div class="vid-card">
+     <div class="card-video">
+       <iframe 
+         title="YouTube video player" 
+         width="560"
+         height="315"
+         src="https://www.youtube.com/embed/6BQOU-v4c3g?si=UuUM4tYjz6gux6J2&cc_load_policy=1" 
+         frameborder="0" 
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+         referrerpolicy="strict-origin-when-cross-origin" 
+         allowfullscreen>
+       </iframe>
+     </div>
+     <div class="card-content">
+       <h3>Video Title 2</h3>
+       <p>Description of video 2 goes here.</p>
+     </div>
+   </div>
+</section>
+
   <section id="accordion">
-    <h3>title </h3>
-<button class="accordion"> question </button>
+    <h3> My Skills </h3>
+<button class="accordion">Creativity</button>
   <div class="panel">
-    <p> text </p>
+    <p>  Enabling designers to generate innovative ideas, solve problems, and produce visually compelling designs </p>
   </div>
 
-<button class="accordion"> question </button>
+<button class="accordion"> Branding </button>
   <div class="panel">
-    <p> text </p>
+    <p>  Branding involves crafting a distinct and cohesive identity that encompasses various elements.</p>
   </div>
 
-<button class="accordion"> question </button>
+  <button class="accordion"> Typography </button>
   <div class="panel">
-    <p> text </p>
+    <p> Understanding the principles, such as font selection, hierarchy, and spacing, to effectively communicate messages and enhance readability.</p>
+  </div>
+
+<button class="accordion"> Communication </button>
+  <div class="panel">
+    <p>  It plays a crucial role in various aspects of life. Exchanging information, ideas, thoughts, and feelings between individuals or groups through verbal, non-verbal, and written means. </p>
   </div>
 
 </section>
