fixed video/ second page

--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles/contact.css">
+  <script defer src="javascript/contact.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <title>Kelly Hoang Contact Page</title>
 </head>
 
 <ul class="navbar"> 
-    <li><a href ="#Bio">Biography</a></li>
-    <li><a href ="#goals">Goals</a></li>
-    <li><a href ="#design">Designs</a></li>
-    <a href="contact.html">Contact</a></p>
+    <li><a href="index.html">About</a></li>
+    <li><a href="index.html">Designs & Projects</a></li>
+    <li><a href="index.html">Inspiration</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="index.html"> Skills </a></li>
 </ul>
 
 <body>
-    <h1>This is Page 2</h1>
-    <p>Welcome to Page 2. <a href="index.html">Go back to Page 1</a></p>
+
+    <section id="contact">
+        <div class="main">
+            <section id="content-container">
+              <div class="content">
+                <div class="about-text">
+                  <h1> Contact me! </h1>
+                  <div class="contact-info">
+                    <p>Email: kelly.hoang@edu.sait.com</p>
+                    <p> Phone number: (403) 456 7890</p>
+                    <p>Follow me: 
+                      <div class="container">
+                        <div class="social-icons">
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></i></a>
+                        </div>
+                    </div>
+                </div>
+                </div>
+              </div>
+            </section>  
+        </div>
+     </section>
 </body>
+
+<section>
+    <footer class="footer-container">
+      <div class="footer-col">
+        <p id="copyright"></p>
+      </div>
+    </footer> 
+  </section>
 </html>
