--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
   <title> Kelly Hoang Portfolio </title>
 </head>
 
-<head> 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>alert Button </title>
-</head>
-
 <body>
   <section id="Hero">
   <section class="hero-container">
@@ -181,8 +175,8 @@
         <div class="footer-col">
           <h4>Contact me! </h4>
           <div class="contact-info">
-            <p>Email: kelly.hoang@edu.sait.com</p>
-            <p>Follow me: 
+            <h5>Email: kelly.hoang@edu.sait.com</h5>
+            <h5>Follow me: </h5>
               <div class="container">
                 <div class="social-icons">
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -199,7 +193,7 @@
         <section>
           <footer class="footer-container">
             <div class="footer-col">
-              <p id="copyright"></p>
+              <h6 id="copyright"></h6>
             </div>
           </footer> 
             </div>
