--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
      </div>
      <div class="card-content">
        <h3> Lofi music </h3>
-       <p> It help you get into the mood!</p>
+       <p> It helps you get into the mood!</p>
      </div>
   </div>
   
